Revert "[#135]: Feature/135-command-validator-overhaul-to-account-for-player-…" (#158)
This reverts commit 17d5c078da73a525ccc125dff5033a05cdf83d19.